# PicoTemplate

./: .gitignore  .gitmodules  CMakeLists.txt  FreeRTOS-Fat-Port.cmake  README.md
test/: CMakeLists.txt  build.cmake  hw_config.c  main.c  project.cmake
test/config/FreeRTOS-FAT/: FreeRTOSFATConfig.h
test/config/FreeRTOS-Kernel/: FreeRTOSConfig.h
test/config/lwip/: lwipopts.h
test/freertos/: main.c  project.cmake
test/freertos-fat/: main.c  project.cmake
test/freertos/config/FreeRTOS-Kernel/: FreeRTOSConfig.h
test/lvgl/: main.c  project.cmake
test/lvgl/config/FreeRTOS-FAT/: FreeRTOSFATConfig.h
test/lvgl/config/FreeRTOS-Kernel/: FreeRTOSConfig.h
test/lvgl/config/LVGL/: lv_conf.h
test/lvgl/msp3223/: display.cmake  ft6336u.cmake  ili9341.cmake
test/lvgl/msp3223/hdr/: display.h  ft6336u.h  ili9341.h  msp3223_utils.h  sd.h
test/lvgl/msp3223/src/: display.c  ft6336u.c  ili9341.c
test/standart/: main.c  project.cmake
